--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -4,20 +4,98 @@
 
 <html>
     <head lang="en">
+        <style>
+
+        	body{
+        		background-color: #ced4de;
+        	}
+        	
+        	#header{
+        		display: block;
+        		height: 80px;
+        	}
+            #header h1{
+            	margin:  32.5%;
+            	font-size: 45px;
+                display: inline;
+            }
+            #home_icon{
+                display: inline;
+            	float: left;
+            	width: 75px;
+            	height: 75px;
+            }
+            #chainring_icon{
+                float: right;
+                width: 75px;
+                height: 75px;
+            }
+
+            #chain_line{
+            	display: block;
+            	height: 20px;
+            	width: 100%;
+            	background-image: url("chain_v2.png");
+                background-repeat: repeat-x;
+            }
+
+            #sub_heading{
+            	display: block;
+            	margin: auto;
+            	font-size: 20px;
+            	text-align: center;
+            }
+            h2{
+            	font-size: 25px;
+            }
+            #side_bar{
+            	display: block;
+            	float: left;
+            	width: 20%;
+            	height: 80vh;
+            	background-color: #59e3ff;
+                
+            }
+            #side_bar ul{
+                list-style-type: none;
+            }
+            #side_bar ul li{
+            	margin-top: 20px;
+            	margin-bottom: 50%;
+                font-size: 20px;
+
+            }
+            #body_block{
+            	display: block;
+            }
+            
+
+        </style>
         <meta charset="UTF-8" />
         <title>
-            Rango - 
+            Cycle Angelo - 
             {% block title_block %}
-                How to Tango with Django!
+                Base Template
             {% endblock %}
         </title>
     </head>
-    <body bgcolor="#800000">
-        {% block header_block %}
-            <h1>
-                Cycle Angelo
-            </h1>
-        {% endblock %}
+    <body>
+        <div id="header">
+    		
+    		<img src="house_and_bike.png" id="home_icon" alt="Home" />
+    		<h1>Cycle Angelo</h1>
+            <img src="chainring.png" id="chainring_icon" alt="Chainring" />
+
+    	</div>
+    	    
+    	<div id ="chain_line">
+    		
+    	</div>
+    	<div id="sub_heading">
+    		{% block sub_heading%}
+            <h2>Welcome to the Base Template!</h2>
+    		{% endblock %}
+      	</div>
         <div>
         {% block body_block %}
         {% endblock %}
@@ -25,19 +103,16 @@
             {% get_category_list category %}
         {% endblock %}
         </div>
-        <hr />
-        <div>
+        <div id="side_bar">
             <ul>
                 {% if user.is_authenticated %}
-                <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
-                    <li><a href="{% url 'rango:restricted' %}">Restricted Page</a></li>
                     <li><a href="{% url 'rango:logout' %}">Logout</a></li>
                 {% else %}
                     <li><a href="{% url 'rango:register' %}">Sign Up</a></li>
                     <li><a href="{% url 'rango:login' %}">Login</a></li>
                 {% endif %}
-                    <li><a href="{% url 'rango:about' %}">About</a></li>
-                    <li><a href="{% url 'rango:index' %}">Index</a></li>
+                    <li><a href="{% url 'rango:about' %}">View Posts</a></li>
+                    <li><a href="{% url 'rango:index' %}">Contact Us</a></li>
             </ul>
         </div>
     </body>
