--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -18,29 +18,17 @@
         </div>
 
         <div>
-        <h2>Most Liked Categories</h2>
-        {% if categories %}
+        <h2>Top Posts</h2>
+        {% if posts %}
             <ul>
-                {% for category in categories %}
+                {% for post in posts %}
                 <li>
-                    <a href="{% url 'rango:show_category' category.slug %}">{{ category.name }}</a>
+                    <a href="{% url 'rango:show_category' category.slug %}">{{post.creator}} says: {{ post.text }}</a>
                 </li>
                 {% endfor %}
             </ul>
         {% else %}
             <strong>There are no categories present.</strong>
-        {% endif %}
-        </div>
-        <div>
-        <h2>Most Viewed Pages</h2>
-        {% if pages %}
-        <ul>
-            {% for page in pages %}
-            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-            {% endfor %}
-        </ul>
-        {% else %}
-            <strong>There are no pages present.</strong>
         {% endif %}
         </div>
 
