--- a/templates/cycle_angelo/add_comment.html
+++ b/templates/cycle_angelo/add_comment.html
@@ -24,7 +24,7 @@
 
 		<input type="submit" name="submit" value="Create Comment" />
 
-<a href="/cycle_angelo/">Home</a> <br/>
+<a href="{% url 'cycle_angelo:index' %}">Home</a> <br/>
 
 </body>
 
