update to base, index and created register.html

--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -92,9 +92,11 @@
     		
     	</div>
     	<div id="sub_heading">
+            <h2>
     		{% block sub_heading%}
-            <h2>Welcome to the Base Template!</h2>
+            Welcome to the Base Template!
     		{% endblock %}
+            </h2>
       	</div>
         <div>
         {% block body_block %}
