--- a/templates/rango/register.html
+++ b/templates/rango/register.html
@@ -15,7 +15,7 @@
 CycleAngelo says: <strong>thank you for registering!</strong>
 <a href="{% url 'rango:index' %}">Return to the homepage.</a>
 {% else %}
-CycleAngelo says: <strong>register here!</strong>
+Register for CycleAngelo <strong>here!</strong>
 <form id="user_form" method="post" action="{% url 'rango:register' %}" enctype="multipart/form-data">
     {% csrf_token %}
 
