edits to base and index

--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-{% load rango_template_tags %}
-{% load staticfiles %}
 
 <html>
-    <head lang="en">
+    <head>
+
         <style>
 
         	body{
@@ -71,13 +70,13 @@
             
 
         </style>
-        <meta charset="UTF-8" />
-        <title>
-            Cycle Angelo - 
-            {% block title_block %}
-                Base Template
-            {% endblock %}
-        </title>
+
+    	<title>
+    		Cycle Angelo - 
+    		{% block title_block %}
+    		    Base Template
+    		{% endblock %}
+    	</title>
     </head>
     <body>
         <div id="header">
