--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -93,17 +93,10 @@
     	<div id="sub_heading">
             <h2>
     		{% block sub_heading%}
-            Welcome to the Base Template!
+                Welcome to the Base Template!
     		{% endblock %}
             </h2>
       	</div>
-        <div>
-        {% block body_block %}
-        {% endblock %}
-        {% block sidebar_block %}
-            {% get_category_list category %}
-        {% endblock %}
-        </div>
         <div id="side_bar">
             <ul>
                 {% if user.is_authenticated %}
@@ -112,9 +105,12 @@
                     <li><a href="{% url 'rango:register' %}">Sign Up</a></li>
                     <li><a href="{% url 'rango:login' %}">Login</a></li>
                 {% endif %}
-                    <li><a href="{% url 'rango:about' %}">View Posts</a></li>
-                    <li><a href="{% url 'rango:index' %}">Contact Us</a></li>
+                    <li><a href="{% url 'rango:posts' %}">View Posts</a></li>
+                    <li><a href="{% url 'rango:about' %}">About Us</a></li>
             </ul>
         </div>
+        <div id="body_block">
+            {% block body_block %}
+            {% endblock %}
     </body>
 </html>
