--- a/templates/cycle_angelo/register.html
+++ b/templates/cycle_angelo/register.html
@@ -19,8 +19,7 @@
 	{% else %}
 	     <strong>Welcome to the Cycle Angelo register page!</strong><br />
 
-	     <form id="user_form" method="post" action="{% url 'cycle_angelo:register' %}"
-                16 enctype="multipart/form-data">
+         <form id="user_form" method="post" action="{% url 'cycle_angelo:register' %}" enctype="multipart/form-data">
 
             {% csrf_token %}
 
