--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -106,13 +106,13 @@
         <div id="side_bar">
             <ul>
                 {% if user.is_authenticated %}
-                    <li><a href="{% url 'rango:logout' %}">Logout</a></li>
+                    <li><a href="{% url 'cycle_angelo:logout' %}">Logout</a></li>
                 {% else %}
-                    <li><a href="{% url 'rango:register' %}">Sign Up</a></li>
-                    <li><a href="{% url 'rango:login' %}">Login</a></li>
+                    <li><a href="{% url 'cycle_angelo:register' %}">Sign Up</a></li>
+                    <li><a href="{% url 'cycle_angelo:login' %}">Login</a></li>
                 {% endif %}
-                    <li><a href="{% url 'rango:about' %}">View Posts</a></li>
-                    <li><a href="{% url 'rango:index' %}">Contact Us</a></li>
+                    <li><a href="{% url 'cycle_angelo:about' %}">View Posts</a></li>
+                    <li><a href="{% url 'cycle_angelo:contact' %}">Contact Us</a></li>
             </ul>
         </div>
     </body>
