--- a/templates/cycle_angelo/register.html
+++ b/templates/cycle_angelo/register.html
@@ -15,7 +15,7 @@
 
 	{% if registered %}
 	    <strong>Thank you for registering with Cycle Angelo!</strong> <br />
-	    <a href="{% url 'cycle_angelo:index' %}">Return to the home page</a>
+	    <a href="{% url 'cycle_angelo:index' %}">Return to the home page.</a>
 	{% else %}
 	     <strong>Welcome to the Cycle Angelo register page!</strong><br />
 
