--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-{% load rango_template_tags %}
 {% load staticfiles %}
 
 <html>
@@ -92,9 +91,12 @@
     		
     	</div>
     	<div id="sub_heading">
-    		{% block sub_heading%}
-            <h2>Welcome to the Base Template!</h2>
-    		{% endblock %}
+            <h2>
+                CycleAngelo - 
+    		    {% block sub_heading%}
+                    Base Template
+    		    {% endblock %}
+            </h2>
       	</div>
         <div>
         {% block body_block %}
@@ -106,6 +108,7 @@
         <div id="side_bar">
             <ul>
                 {% if user.is_authenticated %}
+                    <li><a href = "{% url 'cycle_angelo:profile' %}">View Profile</a></li>
                     <li><a href = "{% url 'cycle_angelo:add_post' %}">Create a post</a></li>
                     <li><a href="{% url 'cycle_angelo:logout' %}">Logout</a></li>
                 {% else %}
