Added chainline to base.html with proper urls

--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -34,7 +34,7 @@
             	display: block;
             	height: 20px;
             	width: 100%;
-            	background-image: url("chain_v2.png");
+            	background-image: url("{% static 'images/chain_v2.png' %}");
                 background-repeat: repeat-x;
             }
 
@@ -81,9 +81,9 @@
     <body>
         <div id="header">
     		
-    		<img src="house_and_bike.png" id="home_icon" alt="Home" />
+    		<img src="{% static 'images/house_and_bike.png' %}" id="home_icon" alt="Home" />
     		<h1>Cycle Angelo</h1>
-            <img src="chainring.png" id="chainring_icon" alt="Chainring" />
+            <img src="{% static 'images/chainring.png' %}" id="chainring_icon" alt="Chainring" />
 
     	</div>
     	    
