--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -10,6 +10,7 @@
         {% block sub_heading %}
             Register Here!
         {% endblock %}
+        {% block body_block %}
         <form method="post" action".">
             {% csrf_token %}
 
@@ -17,5 +18,6 @@
 
             <input type="submit" value"Register" />
         </form>
+        {% endblock %}
     </body>
 </html>
