--- a/templates/cycle_angelo/index.html
+++ b/templates/cycle_angelo/index.html
@@ -5,17 +5,6 @@
 <html>
 
 <head>
-
-	<style>
-		
-		#posts{
-			text-align: right;
-			color: red;
-
-
-		}
-
-	</style>
 	
 {% block title_block %}
     Index
@@ -25,16 +14,17 @@
 
 <body>
 	{% block sub_heading %}
+	{% if user.is_authenticated %}
+	{{ user.username }}'s
+	{% endif %}
 		Home Page
 	{% endblock %}
-	{% if user.is_authenticated %}
-	Welcome back {{ user.username }}! <br />
-	{% endif %}
+	
 
 
 {% block body_block %}
 <div id="posts">
-    <h2 style="text-align: center;">Top Posts on Cycle Angelo:</h2>
+    <h2>Top Posts on Cycle Angelo:</h2>
 	<ul>
         {% for post in posts %}
             <li>
@@ -42,6 +32,17 @@
             </li>
         {% endfor %}
     </ul>
+</div>
+<div id="posts">
+	<h2>New Posts on Cycle Angelo:</h2>
+	<ul>
+        {% for post in posts %}
+            <li>
+            <a href="{% url 'cycle_angelo:show_post' post.slug %}">{{post.creator}} says: {{ post.content }}</a>
+            </li>
+        {% endfor %}
+    </ul>
+
 </div>
 {% endblock %}
 </body>
