Updated Profile page

--- a/static/cycle_angelo_css.css
+++ b/static/cycle_angelo_css.css
@@ -1,4 +1,6 @@
-        	body{
+
+
+            body{
         		background-color: #ced4de;
         	}
         	
@@ -6,22 +8,26 @@
         		display: block;
         		height: 80px;
         	}
+
             #header h1{
             	margin:  32.5%;
             	font-size: 45px;
                 display: inline;
             }
+
             #home_icon{
                 display: inline;
             	float: left;
             	width: 75px;
             	height: 75px;
             }
+
             #chainring_icon{
                 float: right;
                 width: 75px;
                 height: 75px;
             }
+
 
             #chain_line{
             	display: block;
@@ -31,15 +37,18 @@
                 background-repeat: repeat-x;
             }
 
+
             #sub_heading{
             	display: block;
             	margin: auto;
             	font-size: 20px;
             	text-align: center;
             }
+
             h2{
             	font-size: 25px;
             }
+
             #side_bar{
             	display: block;
             	float: left;
@@ -48,16 +57,19 @@
             	background-color: #59e3ff;
                 
             }
+
             #side_bar ul{
                 list-style-type: none;
 
             }
+
             #side_bar ul li{
             	margin-top: 20px;
             	margin-bottom: 50px;
                 font-size: 20px;
 
             }
+
             #body_block{
             	display: block;
                 width: 78%;
@@ -70,10 +82,9 @@
         #posts{
             width: 50%;
             display: inline;
-            float:  left;
-
-            
+            float:  left;   
         }
+
         #posts ul {
             
             height: 60vh;
@@ -81,8 +92,25 @@
             background-color: #34a1eb ;
             width: 75%;
         }
+
         #posts ul li{
             list-style-type: none;
             font-size: 23px;
-            margin-bottom: 12px;
+            margin-bottom: 5px;
+        }
+
+        #posts ul li p{
+            font-size: 17px;
+        }
+
+        #profile_picture {
+            display: inline;
+            float: right;
+            width: 50%;
+            float: left;
+        }
+
+        #profile_picture img{
+            margin-left: 10px ;
+            margin-top: 10px ;
         }
