--- a/templates/cycle_angelo/base.html
+++ b/templates/cycle_angelo/base.html
@@ -4,7 +4,7 @@
 <html>
     <head lang="en">
 
-<link rel="stylesheet" href="{% static 'cycle_angelo_css.css' %}">
+<link rel="stylesheet" type ='text/css' href="{% static 'cycle_angelo_css.css' %}">
 
         <meta charset="UTF-8" />
         <title>
@@ -44,7 +44,7 @@
         <div id="side_bar">
             <ul>
                 {% if user.is_authenticated %}
-                    <li><a>View Profile</a></li>
+                    <li class="nav-item"> <a class="nav-link" href="{% url 'cycle_angelo:profile' user.username %}">View Profile</a></li>
                     <li><a href="{% url 'cycle_angelo:add_post' %}">Create a post</a></li>
                     <li><a href="{% url 'auth_logout' %}?next={% url 'cycle_angelo:index' %}">Logout</a></li>
                 {% else %}
