--- a/static/cycle_angelo_css.css
+++ b/static/cycle_angelo_css.css
@@ -1,4 +1,5 @@
 
+/*For base template*/
 
             body{
         		background-color: #ced4de;
@@ -103,6 +104,8 @@
             font-size: 17px;
         }
 
+        /*For profile page*/
+
         #profile_picture {
             display: inline;
             float: right;
@@ -113,4 +116,32 @@
         #profile_picture img{
             margin-left: 10px ;
             margin-top: 10px ;
+        }
+
+        /*For individual post page*/
+
+        #post_content{
+            font-size: 19px;
+            margin-left: 25px;
+            background-color: #34a1eb ;
+            height: 60vh;
+            width: 75%;
+        }
+        #post_content p{
+            margin-top: 20px;
+            margin-left: 10px;
+        }
+        #post_title{
+            font-size: 25px;
+            margin:  auto;
+            margin-left: 25px;
+        }
+
+        #comment_title{
+            display: inline;
+            margin-top: 10%;
+        }
+        #comment_link{
+            margin-left: 33%;
+            text-align: center;
         }
