New tests added + contact page update

--- a/templates/cycle_angelo/contact_us.html
+++ b/templates/cycle_angelo/contact_us.html
@@ -27,13 +27,25 @@
     <h1>Thank you for visiting our page! Here are the creators:</h1>
     <ul>
         <li>Adam Templeton</li>
-          <ul><li>2567437t@student.gla.ac.uk</li></ul>
+          <ul>
+            <li><a href="mailto:2567437t@student.gla.ac.uk">2567437t@student.gla.ac.uk</a></li>
+            <li><a href=https://github.com/Adam-Tem>Adam's Github</a></li>
+          </ul>
         <li>Nile Inel</li>
-          <ul><li>2555713i@student.gla.ac.uk</li></ul>
+          <ul>
+            <li><a href="mailto:2555713i@student.gla.ac.uk">2555713i@student.gla.ac.uk</a></li>
+            <li><a href=https://github.com/Nileinel>Nile's Github</a></li>
+          </ul>
         <li>Lucas Clement</li>
-          <ul><li>2745633c@student.gla.ac.uk</li></ul>
+          <ul>
+            <li><a href="mailto:2745633c@student.gla.ac.uk">mailto:2745633c@student.gla.ac.uk</a></li>
+            <li><a href=https://github.com/lclement27>Lucas's Github</a></li>
+          </ul>
         <li>Hamish Clark</li>
-          <ul><li>2549100c@student.gla.ac.uk</li></ul>
+          <ul>
+            <li><a href="mailto:2549100c@student.gla.ac.uk">2549100c@student.gla.ac.uk</a></li>
+            <li><a href=https://github.com/Shug1876>Hamish's Github</a></li>
+          </ul>
 
     </ul>
   </div>
